Switch from Ruby to browser typescript (#6)
Typescript is a more commonly used language than Ruby.

Doing it through the browser allows us to generate HAR (HTTP ARchive)
files rather than VCR YML logs. HAR files are more common and they are
understood by various software.

There is an example HAR file called `example.har`.
Note that the authentication and sessions in the example are no longer
valid.

Doing it through the browser makes it easier to use.

Doing it through the browser gives us an opportunity to swap out the old
vCloud library. This library forced the project onto an old unsupported
version of Ruby.

There is a webpage with a form that takes the information required to
build a new VDC and edge. Clicking "Go" runs some client side Javascript
to make the various API calls required. Being client side makes it easy
to inspect.

However, due to CORS, the webpage cannot actually connect to the 2
servers required. To work around this, we proxy the servers (the browser
then securely treats them as independent from the originals), but our
page can connect to the proxied versions.

Initially I used nginx for this proxy.
nginx then got replaced by a custom server because:

* nginx didn't like using dots in the url, so previously I'd had to replace them with dashes
* nginx wanted to know ahead of time all the possible hosts to proxy. Now I can say the hosts must be a subdomain of a passed in value.
* nginx didn't remove the `secure` flag from cookies, which is incompatible with running this server locally http (which isn't to say https and the secure flag shouldn't be used in production).

I used the rust http library hyper. I like hyper, but it's not perfect (yet).
* I don't think I can yet be generic over http clients, or use a mock one for tests. Without this, it's difficult to test the server (although bits are tested). I expect it could have been tested using real http servers, but this is probably overkill for the scope of th
